Implements #24: Mastered sugggestions algorithms!